[gd_scene load_steps=25 format=2]

[ext_resource path="res://entity/drone_hulls/hull_3/hull_3.gd" type="Script" id=1]
[ext_resource path="res://assets/other/fire/fire.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/3DOutline/Outline.material" type="Material" id=3]
[ext_resource path="res://entity/wheel/wheel.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape" id=16]
points = PoolVector3Array( -0.576273, -0.2, -1.42363, 0.57678, 0.2, 1.40018, 0.586357, -0.2, 1.42363, -0.576273, -0.2, 1.42363, 0.586357, -0.2, -1.42363, -0.566584, 0.2, -1.3999, 0.57678, 0.2, -1.40018, -0.566584, 0.2, 1.3999 )

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1.2, 0.4, 3 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.376471, 0.756863, 1 )

[sub_resource type="CylinderMesh" id=5]
top_radius = 0.6
bottom_radius = 0.6
height = 0.2

[sub_resource type="SpatialMaterial" id=6]
next_pass = ExtResource( 3 )
albedo_color = Color( 0.462745, 0.462745, 0.462745, 1 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.8, 0.3, 0.7 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.301961, 0.301961, 0.301961, 1 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 1.3, 0.08, 0.7 )

[sub_resource type="SpatialMaterial" id=11]
next_pass = ExtResource( 3 )
albedo_color = Color( 0.439216, 0.439216, 0.439216, 1 )

[sub_resource type="CubeMesh" id=23]
size = Vector3( 0.45, 0.1, 3.3 )

[sub_resource type="SpatialMaterial" id=13]
next_pass = ExtResource( 3 )
albedo_color = Color( 0.294118, 0.294118, 0.294118, 1 )

[sub_resource type="CylinderMesh" id=21]
top_radius = 0.2
bottom_radius = 0.2
height = 0.2

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 0.317647, 0.317647, 0.317647, 1 )

[sub_resource type="CylinderMesh" id=12]
top_radius = 0.4
bottom_radius = 0.4
height = 0.2

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.294118, 0.294118, 0.294118, 1 )

[sub_resource type="CylinderMesh" id=18]
top_radius = 0.4
bottom_radius = 0.4
height = 0.2

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 0.294118, 0.294118, 0.294118, 1 )

[sub_resource type="CubeMesh" id=24]
size = Vector3( 0.4, 0.1, 2.5 )

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[sub_resource type="CubeMesh" id=17]
size = Vector3( 0.4, 0.1, 0.7 )

[node name="hull_3" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00345802, 4.76837e-07, 0.0104241 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 16 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="body" type="Spatial" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110327, 0 )

[node name="MeshInstance" type="MeshInstance" parent="pivot/body"]
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = SubResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="pivot/body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.179, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )

[node name="MeshInstance5" type="MeshInstance" parent="pivot/body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.54488e-08, 0.0923457, -0.977435 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")
material/0 = SubResource( 9 )

[node name="MeshInstance6" type="MeshInstance" parent="pivot/body"]
transform = Transform( 1, -2.65009e-08, 4.11343e-09, 2.65009e-08, 0.952948, -0.303135, 4.11341e-09, 0.303135, 0.952948, -1.25961e-07, 0.199532, 1.4305 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 11 )

[node name="MeshInstance3" type="MeshInstance" parent="pivot/body"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.733663, 0.102627, 0.0438469 )
mesh = SubResource( 23 )
skeleton = NodePath("../../../..")
material/0 = SubResource( 13 )

[node name="MeshInstance8" type="MeshInstance" parent="pivot/body"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.734, 0.103, 0.044 )
mesh = SubResource( 23 )
skeleton = NodePath("../../../..")
material/0 = SubResource( 13 )

[node name="MeshInstance7" type="MeshInstance" parent="pivot/body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.24797e-07, 0, -1.43162 )
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

[node name="wheel" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 1.74846e-08, 0.4, 6.03983e-08, 0.4, -1.74846e-08, -1.01644e-21, 2.64009e-15, 6.03983e-08, -0.4, 0.790123, 0.0423748, 1.36582 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
rotate_speed = 0.2

[node name="wheel1" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 3.0598e-08, 0.7, 1.05697e-07, 0.7, -3.0598e-08, -1.77877e-21, 4.62016e-15, 1.05697e-07, -0.7, 0.734803, -0.126934, 0.837768 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
rotate_speed = 0.2

[node name="wheel2" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 3.0598e-08, 0.7, 1.05697e-07, 0.7, -3.0598e-08, -1.77877e-21, 4.62016e-15, 1.05697e-07, -0.7, 0.734803, -0.126934, 0.126937 )
mesh = SubResource( 18 )
skeleton = NodePath("../..")
material/0 = SubResource( 19 )
rotate_speed = 0.2

[node name="wheel3" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 3.0598e-08, 0.7, 1.05697e-07, 0.7, -3.0598e-08, -1.77877e-21, 4.62016e-15, 1.05697e-07, -0.7, 0.734803, -0.133128, -0.593867 )
mesh = SubResource( 18 )
skeleton = NodePath("../..")
material/0 = SubResource( 19 )
rotate_speed = 0.2

[node name="wheel4" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 2.18557e-08, 0.5, 7.54979e-08, 0.5, -2.18557e-08, -1.27055e-21, 3.30012e-15, 7.54979e-08, -0.5, 0.734803, -0.0333225, -1.15677 )
mesh = SubResource( 18 )
skeleton = NodePath("../..")
material/0 = SubResource( 19 )
rotate_speed = 0.2

[node name="wheel5" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( -1.74846e-08, -0.4, 0, 0.4, -1.74846e-08, -1.01644e-21, 1.05879e-21, 0, 0.4, -0.753086, 0.0423748, 1.36582 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
rotate_speed = 0.2

[node name="wheel6" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( -3.0598e-08, -0.7, 0, 0.7, -3.0598e-08, -1.77877e-21, 1.69407e-21, 0, 0.7, -0.739206, -0.126934, 0.837758 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
rotate_speed = 0.2

[node name="wheel7" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( -3.0598e-08, -0.7, 0, 0.7, -3.0598e-08, -1.77877e-21, 1.69407e-21, 0, 0.7, -0.739206, -0.126934, 0.126937 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
rotate_speed = 0.2

[node name="wheel8" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( -3.0598e-08, -0.7, 0, 0.7, -3.0598e-08, -1.77877e-21, 1.69407e-21, 0, 0.7, -0.739206, -0.133128, -0.593867 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
rotate_speed = 0.2

[node name="wheel9" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, -1.27055e-21, 1.27055e-21, 0, 0.5, -0.739206, -0.0333225, -1.15677 )
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
rotate_speed = 0.2

[node name="track" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.796635, -0.420705, 0.0299818 )
mesh = SubResource( 24 )
material/0 = SubResource( 20 )

[node name="track4" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.76881, -0.420705, 0.0299817 )
mesh = SubResource( 24 )
material/0 = SubResource( 20 )

[node name="track2" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 6.62792e-08, 3.04157e-08, -6.62792e-08, 0.652085, 0.758146, 3.04157e-08, -0.758146, 0.652085, 0.796635, -0.151359, 1.49275 )
mesh = SubResource( 17 )
material/0 = SubResource( 20 )

[node name="track3" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 7.31222e-08, 1.35338e-07, -7.31222e-08, -0.548089, 0.83642, 1.35338e-07, -0.83642, -0.548089, 0.796635, -0.151359, -1.37828 )
mesh = SubResource( 17 )
material/0 = SubResource( 20 )

[node name="track5" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 6.62792e-08, 3.04157e-08, -6.62792e-08, 0.652085, 0.758146, 3.04157e-08, -0.758146, 0.652085, -0.774836, -0.151359, 1.49275 )
mesh = SubResource( 17 )
material/0 = SubResource( 20 )

[node name="track6" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 7.31222e-08, 1.35338e-07, -7.31222e-08, -0.548089, 0.83642, 1.35338e-07, -0.83642, -0.548089, -0.774836, -0.151359, -1.37828 )
mesh = SubResource( 17 )
material/0 = SubResource( 20 )

[node name="fire" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.300952, 0.965339 )

[node name="turret_pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
